fix: env vars bugs